--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "flowchart",
   "version": "0.1.8",
-  "private": true,
+  "private": false,
   "main": "./dist/vue-flowchart.common.js",
   "files": [
     "dist"
